# voxel-engine

./: CMakeLists.txt  Makefile  README.md  log  lsan.supp  todo.txt  vg.supp
res/shaders/: gui.frag  gui.vert  voxel.frag  voxel.vert
src/: main.c
src/data_structures/: dynamic_array.c  dynamic_array.h  hash_map.c  hash_map.h  linked_list.c  linked_list.h  priority_queue.c  priority_queue.h  queue.c  queue.h  safe_queue.c  safe_queue.h  spmc_queue.c  spmc_queue.h  stack.c  stack.h
src/game/: items.c  items.h  main_gui.c  main_gui.h  player.c  player.h  state.c  state.h
src/graphics/: bo.c  bo.h  camera.c  camera.h  renderer.c  renderer.h  shader.c  shader.h  shader_program.c  shader_program.h  texture.c  texture.h  tilemap.c  tilemap.h  vao.c  vao.h  window.c  window.h
src/gui/: element.c  element.h  gui.c  gui.h  gui_element.h  hotbar.c  hotbar.h  image.c  image.h
src/input/: keyboard.c  keyboard.h  mouse.c  mouse.h
src/math/: cuboid.c  cuboid.h  mat3.h  mat4.h  math_util.c  math_util.h  rectangle.c  rectangle.h  vec2.h  vec3.h
src/math/mat3/: mat3d.c  mat3d.h
src/math/mat4/: mat4d.c  mat4d.h
src/math/vec2/: vec2_convert.c  vec2_convert.h  vec2d.c  vec2d.h  vec2f.c  vec2f.h  vec2i.c  vec2i.h
src/physics/: collision.c  collision.h
src/threads/: condition.h  mutex.h  thread.h  threads.h
src/util/: direction.h  gl.h  log.c  log.h  logging.h  platform.h  stopwatch.c  stopwatch.h  thread_pool.c  thread_pool.h
src/world/: block.c  block.h  chunk.c  chunk.h  noise.h  worker.c  worker.h  world.c  world.h  world_generation.c  world_generation.h
(+14 files in other folders)
